fix: adjust the route page interface and restructure the css

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,12 +10,16 @@
 
 /* Utilities */
 @import "./utilities/colors.css";
+@import "./utilities/header.css";
 
 /* Components */
 @import "./components/buttons.css";
 @import "./components/card.css";
 @import "./components/badge.css";
 @import "./components/sidebar.css";
+@import "./components/dropdown.css";
+@import "./components/image.css";
+@import "./components/teks.css";
 
 /* Bootstrap Overrides */
 @import "./override/bootstrap.css";
